--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.prod
+.env.dev
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -102,3 +104,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+yarn.lock
